INTYG-3618: Lade till färg för ersatt header

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/_variables.scss
@@ -4,6 +4,7 @@ $mi-intyg-body-bg: #fff;
 $mi-box-shadow-color: #ddd;
 $mi-intyg-header-bg: #43799A;
 $mi-intyg-header-color: #fff;
+$mi-intyg-header-disabled-color :#777;
 
 // overrides variables from app-shared to match style of unified-view components with minaintyg
 
