--- a/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
+++ b/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
@@ -40,12 +40,12 @@
           on-send="send(cert)"
           enable-archive="true"
           enable-print="true"
-          is-replaced="certMeta.replacedBy">
+          is-replaced="certMeta.isReplaced">
 
       </mi-certificate-action-buttons>
 
       <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
-      <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+      <uv-render-components ng-class="{'certificate-header-replaced' : certMeta.isReplaced}" config="uvConfig" view-data="cert"></uv-render-components>
 
       <div class="row col-xs-12 text-muted"><br><span message key="modules.view-intyg.end-of-intyg.text"></span></div>
     </div>
