--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -55,10 +55,10 @@
       <mi-certificate-replaced cert-meta-model="certMeta"></mi-certificate-replaced>
       <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true"
                                      enable-print="true"
-                                     is-replaced="certMeta.replacedBy"></mi-certificate-action-buttons>
+                                     is-replaced="certMeta.isReplaced"></mi-certificate-action-buttons>
 
       <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
-      <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+      <uv-render-components ng-class="{'certificate-header-replaced' : certMeta.isReplaced}" config="uvConfig" view-data="cert"></uv-render-components>
 
       <div class="row col-xs-12 text-muted"><br><span message key="modules.view-intyg.end-of-intyg.text"></span></div>
     </div>
