INTYG-4751: Ny designkomponent för osäkert dödsdatum + valideringsmeddelande fixade.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/vagueDate.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/vagueDate.scss
@@ -18,10 +18,13 @@
  */
 
 .vagueDate {
-    .year {
-        width: 52px;
+    .month {
+        padding: 0 10px;
     }
-    .month, .day {
-        width: 36px;
+    .year, .month {
+        width: 140px;
+    }
+    .day {
+        width: 40px;
     }
 }
