--- a/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
+++ b/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
@@ -52,3 +52,10 @@
     <!-- eof spinner -->
   </div>
 </div>
+
+<mi-page-message-icon
+    id="errorMessage"
+    img-path="/img/404.png"
+    msg-key="{{errorMessage}}"
+    ng-if="doneLoading && errorMessage">
+</mi-page-message-icon>
