--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateActionButtons/miCertificateActionButtons.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateActionButtons/miCertificateActionButtons.directive.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-show="certModel">
   <div class="col-xs-12">
 
       <!-- Visa endast följande knappar om intyget ej blivit ersatt -->
