--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
@@ -1,4 +1,4 @@
-<div class="mi-compact-certificate-body">
+<div class="mi-compact-certificate-body" ng-show="certMetaModel">
   <div class="row">
     <div class="col-xs-12">
       <div class="text-muted"><span message key="inbox.list.issuer.label" /></div>
