INTYG-4527: Datumväljare lägger sig nu ovanför headern i utkastvyn.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -100,6 +100,7 @@
   @import 'components/_wc-table-head.scss';
   @import 'components/_wc-uv-override.scss';
   @import 'components/_wc-vardenhet-selector.scss';
+  @import 'date/wcDatePickerField.directive.scss';
   @import 'fk/arenden/_arende.scss';
   @import 'fmb/_fmb.scss';
   @import 'gui/formly/diagnos.scss';
