INTYG-4821: Bättre formatering på polisanmälan hjälptexterna

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -561,6 +561,10 @@
     white-space: pre-line;
   }
 
+  .white-space-normal {
+    white-space: normal;
+  }
+
   /* Used in some jsps */
   .bluebox {
     background-color: $color_blue_chill_approx;
