INTYG-4630: srs bedömningsstöd kan öppnas från flera ställen

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -8,8 +8,7 @@
         <div class='col-xs-12'>
           <div class="form-group">
             <div>
-                <wc-srs-help-display person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid"
-                intygs-typ="model.name">
+                <wc-srs-help-display id='2'>
                 <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
             </div>
             <span class="bold" message key="fk7263.label.valjkodverk"></span><br>
