--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -44,6 +44,10 @@
  .srs-question{
   display: inline;
  }
+
+ .srs-btn6b-height-adjustment{
+   top: -10px !important;
+ }
  
  .prediction-box{
    border: 3px solid #000000 !important;
