--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
@@ -11,7 +11,9 @@
         {{lastEffectiveDateNoticeText}}
       </div>
 
+      <wc-srs-help-display id='8b'></wc-srs-help-display>
       <wc-fmb-help-display related-form-id="FALT8B" fmb-states="fmbViewState" field-name="ARBETSFORMAGA">
+      <!--<wc-srs-help-display person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid" intygs-typ="model.name">-->
 
         <div class="form-group form-inline">
           Faktisk tjänstgöringstid <input style="width: 3em;" type="text" wc-decimal-number
