INTYG-4864: Uppdaterade texter om Webcert och vanliga frågor.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
@@ -105,15 +105,14 @@
 <h4>Invånarens intyg</h4>
 
 <p>
-  I samband med att intyget signeras görs det tillgängligt för invånaren i Mina intyg. I Mina intyg kan
-  invånaren skicka intyget vidare elektroniskt till någon av de anslutna mottagarna, eller skriva ut det.
-  För sjukpenningintyget är det också möjligt att skapa en anpassad utskrift som kan ges till arbetsgivaren.
-  Mina intyg nås via 1177 Vårdguidens e-tjänster <span dynamiclink key="1177"></span> eller via
-  <span dynamiclink key="minaintyg"></span>.
+  I samband med att ett intyg signeras görs det tillgängligt för invånaren i Mina intyg, med undantag för
+  Dödsbevis och Dödsorsaksintyg som inte visas i Mina intyg. I Mina intyg kan invånaren skicka intyget vidare
+  elektroniskt till någon av de anslutna mottagarna eller skriva ut det. För sjukpenningintyget är det också
+  möjligt att skapa en anpassad utskrift som kan ges till arbetsgivaren. Mina intyg nås via 1177 Vårdguidens
+  e-tjänster <span dynamiclink key="1177"></span> eller via <span dynamiclink key="minaintyg"></span>.
 </p>
 <p>
-  Om invånaren inte vill använda Mina intyg är det möjligt för läkaren att skicka intyget elektroniskt direkt
-  från Webcert till mottagaren. Observera att invånarens samtycke då krävs.
+  Om invånaren inte vill använda Mina intyg är det möjligt för läkaren att skicka intyget elektroniskt direkt från Webcert till huvudmottagaren av intyget. Observera att detta ska göras i samråd med patienten.
 </p>
 <p>
   Läkaren kan också skriva ut det signerade intyget från Webcert och ge till patienten.
