--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/vanliga-fragor-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/vanliga-fragor-partial.html
@@ -104,15 +104,17 @@
     <p>
       Du har inte signerat intyget, skicka-knappen är endast tillgänglig för ett signerat intyg. </p>
 
-    <h4>När ska jag skicka intyget till Försäkringskassan?</h4>
+    <h4>När ska jag skicka intyget?</h4>
 
-    <p>Intyg ska endast skickas till Försäkringskassan om samtliga tre punkter är uppfyllda:</p>
+    <p>Ett sjukpenningintyg ska endast skickas till Försäkringskassan om samtliga fyra punkter är uppfyllda:</p>
     <ul>
       <li>Sjukskrivningen kommer att vara längre än 14 dagar.</li>
       <li>Patienten kommer att ansöka om sjukpenning.</li>
       <li>Patienten kan eller vill inte skicka intyget från Mina intyg.</li>
+      <li>Skickandet görs i samråd med patienten.</li>
     </ul>
-    <p>Tänk på att ett intyg alltid ska skickas till Försäkringskassan i samråd med patienten.</p>
+    <p>Försäkringskassans övriga intyg samt transportstyrelsens intyg ska skickas efter överenskommelse med patienten.</p>
+    <p>Dödsbevis och dödsorsaksintyget skickas alltid automatiskt i samband med signering.</p>
   </div>
 
 
@@ -144,8 +146,7 @@
 
     <h4>En fråga har besvarats via brev och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan?</h4>
 
-    <p>
-      Klicka i boxen "Markera som hanterad" intill frågan. Frågan flyttas då till Tidigare frågor och svar. </p>
+    <p>Klicka i boxen "Markera som hanterad" intill frågan. Frågan markeras då som hanterad.</p>
   </div>
 
   <h3>Tekniska frågor</h3>
@@ -247,13 +248,15 @@
     <h4>Vad är skillnaden mellan ett intyg och ett utkast?</h4>
 
     <p>
-      Ett utkast är inte signerat och behöver inte innehålla alla uppgifter som är obligatoriska vid signering.
-      Du kan spara och ändra i det så många gånger du vill. Ett utkast går även att radera och tas då bort.
-      Vid signering övergår utkastet till att bli ett intyg. I samband med att intyget signeras skickas det till
-      Intygstjänsten och kan då nås av patienten via Mina intyg. </p>
+      Ett utkast är inte signerat och behöver inte innehålla alla uppgifter som är obligatoriska vid signering. Du kan spara och ändra i det så många gånger du vill. Ett utkast går även att radera och tas då bort. Vid signering övergår utkastet till att bli ett intyg. I samband med att intyget signeras skickas det till Intygstjänsten.
+    </p>
+    <p>
+      Så fort ett intyg är skickat till intygstjänsten är det tillgängligt för invånaren via minaintyg.se, med undantag för dödsbevis och dödsorsaksintyg som aldrig tillgängliggörs på Mina intyg.
+    </p>
     <p>
       Ett signerat intyg kan inte ändras eller raderas, däremot kan ett intyg ersättas av ett nytt intyg. Ett intyg
-      kan också vid allvarligt fel makuleras (ogiltigförklaras). </p>
+      kan också vid allvarligt fel makuleras (ogiltigförklaras).
+    </p>
 
     <h4>Tangentbordsnavigering i Webcert</h4>
 
