INTYG-4644: Ny feature-hantering

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor-partial.html
@@ -2,7 +2,7 @@
 <div wc-authority request-origin="NORMAL">
 
   <!-- SKRIVA  ----------------->
-  <div wc-authority feature="hanteraIntygsutkast">
+  <div wc-authority feature="HANTERA_INTYGSUTKAST">
     <h3>Skriva intyg</h3>
 
     <h4>Finns det någon hjälpfunktion?</h4>
@@ -87,7 +87,7 @@
 
 
   <!-- SPARA  ------------------>
-  <div wc-authority feature="hanteraIntygsutkast">
+  <div wc-authority feature="HANTERA_INTYGSUTKAST">
     <h3>Spara intyg</h3>
 
     <h4>Varför går det inte att spara intyget?</h4>
@@ -99,7 +99,7 @@
 
 
   <!-- SKICKA  ------------------>
-  <div wc-authority feature="hanteraIntygsutkast">
+  <div wc-authority feature="HANTERA_INTYGSUTKAST">
     <h3>Skicka intyg</h3>
 
     <h4>Varför syns inte skicka-knappen?</h4>
@@ -122,7 +122,7 @@
 
 
   <!-- FRÅGA OCH SVAR  ------------------>
-  <div wc-authority feature="hanteraFragor">
+  <div wc-authority feature="HANTERA_FRAGOR">
     <h3>Fråga och svars-funktionen</h3>
 
     <h4>Hur ställer jag en fråga till Försäkringskassan?</h4>
@@ -169,7 +169,7 @@
 <div wc-authority request-origin="UTHOPP">
 
   <!-- FRÅGA OCH SVAR  ------------>
-  <div wc-authority feature="hanteraFragor">
+  <div wc-authority feature="HANTERA_FRAGOR">
     <h3>Fråga och svars-funktionen</h3>
 
     <h4>Hur ställer jag en fråga till Försäkringskassan?</h4>
@@ -218,7 +218,7 @@
 <div wc-authority request-origin="DJUPINTEGRATION">
 
   <!-- SKRIVA  ----------------->
-  <div wc-authority feature="hanteraIntygsutkast">
+  <div wc-authority feature="HANTERA_INTYGSUTKAST">
     <h3>Skriva intyg</h3>
 
     <h4>Finns det någon hjälpfunktion?</h4>
@@ -306,7 +306,7 @@
 
 
   <!-- SPARA  ------------------>
-  <div wc-authority feature="hanteraIntygsutkast">
+  <div wc-authority feature="HANTERA_INTYGSUTKAST">
     <h3>Spara intyg</h3>
 
     <h4>Varför går det inte att spara intyget?</h4>
@@ -318,7 +318,7 @@
 
 
   <!-- SKICKA  ------------------>
-  <div wc-authority feature="hanteraIntygsutkast">
+  <div wc-authority feature="HANTERA_INTYGSUTKAST">
     <h3>Skicka intyg</h3>
 
     <h4>Varför syns inte skicka-knappen?</h4>
@@ -341,7 +341,7 @@
   </div>
 
   <!-- FRÅGA OCH SVAR  ------------>
-  <div wc-authority feature="hanteraFragor">
+  <div wc-authority feature="HANTERA_FRAGOR">
     <h3>Fråga och svars-funktionen</h3>
 
     <h4>Hur ställer jag en fråga till Försäkringskassan?</h4>
