--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6b.html
@@ -1,14 +1,16 @@
 <div class="field-fade" ng-hide="viewState.avstangningSmittskydd()">
     <div wc-field field-label="fk7263.label.atgarder" field-number="6b"
          field-help-text="fk7263.helptext.atgarder">
-         <wc-srs-help-display id='6b'></wc-srs-help-display>
+         
         <div class="form-group">
             <label class="control-label">Planerad eller pågående behandling eller åtgärd inom sjukvården (ange
                 vilken)</label>
+                <wc-srs-help-display id='6b'>
                   <textarea id="measuresCurrent" class="form-control" name="measures.current" rows="2" auto-expand
                             ng-model="model.atgardInomSjukvarden" wc-maxlength ng-trim="false"
                             maxlength="{{viewState.inputLimits.atgardInomSjukvarden}}"
                             ng-blur="validate()"></textarea>
+                        </wc-srs-help-display>
         </div>
 
         <div class="form-group">
