INTYG-4880: intyg-read-only (fk7263/lisjp)vyn visar nu även srs information via nytt direktiv

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
@@ -1,5 +1,9 @@
 .wc-intyg-read-only {
   padding: 20px 30px;
+
+  .srs-border {
+    border-right:1px #eee solid;
+  }
   //Here we can override default webcert styles for uv framework components e.g:
   uv-kategori h2 {
 
