--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -129,6 +129,7 @@
   @import 'intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss';
   @import 'intyg/unified-view/wcInlineKomplettering.directive.scss';
   @import 'srs/_srs.scss';
+  @import 'srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.scss';
   // endinjector
 
   %font-common {
