INTYG-4965: Modal för frågetecken följde inte med vid scrollning

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -298,6 +298,7 @@
      padding: 15px 15px 5px 15px;
      overflow-x: hidden;
      overflow-y: auto;
+     position: relative;
    }
  
    > .panel-heading {
