--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6a-7-11.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6a-7-11.html
@@ -1,13 +1,13 @@
 <div class="" id="anchor-rekommendationer">
     <div wc-field field-label="fk7263.label.rekommendationer" id="rekommendationerForm" field-number="6a, 7, 11"
          field-help-text="fk7263.helptext.rekommendationer">
-         <wc-srs-help-display id='6a711'>
-        <!-- 11 -->
-        <div>Resor till och från arbetet med annat färdmedel än normalt kan göra det möjligt för patienten
-            att återgå i arbete</label> <span wc-help-chevron
-                                              help-text-key="fk7263.helptext.rekommendationer.resor"></span><span wc-help-chevron-text help-text-key="fk7263.helptext.rekommendationer.resor"></span>
-        </div>
-    </wc-srs-help-display>
+        <wc-help-wrapper srs-id="6a711">
+            <!-- 11 -->
+            <div>Resor till och från arbetet med annat färdmedel än normalt kan göra det möjligt för patienten
+                att återgå i arbete</label> <span wc-help-chevron
+                                                  help-text-key="fk7263.helptext.rekommendationer.resor"></span><span wc-help-chevron-text help-text-key="fk7263.helptext.rekommendationer.resor"></span>
+            </div>
+        </wc-help-wrapper>
 
         <div class="form-group form-inline" id="rekommendationRessattRadioGroup">
             <label class="radio-inline">
