--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
@@ -11,10 +11,7 @@
         {{lastEffectiveDateNoticeText}}
       </div>
 
-      <wc-srs-help-display id='8b'>
-      <wc-fmb-help-display related-form-id="FALT8B" fmb-states="fmbViewState" field-name="ARBETSFORMAGA">
-        </wc-srs-help-display>
-      <!--<wc-srs-help-display person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid" intygs-typ="model.name">-->
+      <wc-help-wrapper fmb-id="FALT8B" fmb-field-name="ARBETSFORMAGA" srs-id="8b">
 
         <div class="form-group form-inline">
           Faktisk tjänstgöringstid <input style="width: 3em;" type="text" wc-decimal-number
@@ -224,7 +221,9 @@
                                  validations="viewState.getValidationErrors('nedsattmed100')"></wc-field-validation>
           </div>
         </wc-validation-group>
-      </wc-fmb-help-display>
+
+      </wc-help-wrapper>
+
       <div ng-show="field8b.info.totalCertDays">
         <p>Detta intyg motsvarar en period på: <span id="totalCertDays">{{field8b.info.totalCertDays}}</span> <span
             ng-show="field8b.info.totalCertDays > 1">dagar</span><span
