INTYG-4959: Ny layout som placerar knappar och fönster konsekvent.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -103,6 +103,7 @@
   @import 'date/wcDatePickerField.directive.scss';
   @import 'fk/arenden/_arende.scss';
   @import 'fmb/_fmb.scss';
+  @import 'fmb/wcHelpWrapper.scss';
   @import 'gui/formly/diagnos.scss';
   @import 'gui/formly/dodsorsakMulti.scss';
   @import 'gui/formly/dodsorsakRow.scss';
