INTYG-4909: Tvingar användaren att fylla i siffror eller space på postnummer.

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form15.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form15.html
@@ -36,7 +36,7 @@
                   <div class="col-md-9">
                       <input type="text" class="form-control input-5" id="clinicInfoPostalCode"
                              name="clinicInfo.postalCode" ng-model="model.grundData.skapadAv.vardenhet.postnummer"
-                             ng-blur="validate()">
+                             ng-blur="validate()" wc-number>
                   </div>
             </div>
           </wc-validation-wrapper>
