--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
@@ -25,7 +25,8 @@
                    name="viewState.intygModel.grundData.patient.postnummer"
                    ng-model="viewState.intygModel.grundData.patient.postnummer" maxlength="6"
                    ng-blur="validate()"
-                   ng-disabled="userModel.isDjupintegration()">
+                   ng-disabled="userModel.isDjupintegration()"
+                   wc-number>
           </div>
         </div>
       </wc-validation-wrapper>
