--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
@@ -28,7 +28,8 @@
                  ng-model="viewState.intygModel.grundData.patient.postnummer"
                  maxlength="6"
                  ng-blur="validate()"
-                 ng-disabled="userModel.isDjupintegration()">
+                 ng-disabled="userModel.isDjupintegration()"
+                 wc-number>
         </div>
       </div>
     </wc-validation-wrapper>
