INTYG-4909: Fix på fält som delade formly template med postnummerfält.

--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
@@ -33,7 +33,7 @@
         <div class="col-md-10">
           <input type="text" class="form-control input-5" id="clinicInfoPostalCode"
                  name="clinicInfo.postalCode" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postnummer"
-                 maxlength="6" ng-blur="validate()">
+                 maxlength="6" ng-blur="validate()" wc-number>
         </div>
       </div>
     </wc-validation-wrapper>
