INTYG-4909: Fixade att man kan skriva bokstäver på ts patient postnummer.

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
@@ -26,7 +26,7 @@
                    ng-model="viewState.intygModel.grundData.patient.postnummer" maxlength="6"
                    ng-blur="validate()"
                    ng-disabled="userModel.isDjupintegration()"
-                   wc-number>
+                   wc-number="true">
           </div>
         </div>
       </wc-validation-wrapper>
