--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
@@ -29,7 +29,7 @@
                  maxlength="6"
                  ng-blur="validate()"
                  ng-disabled="userModel.isDjupintegration()"
-                 wc-number>
+                 wc-number="true">
         </div>
       </div>
     </wc-validation-wrapper>
