--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
@@ -67,9 +67,9 @@
   </div>
 </div>
 
-<mi-page-message-icon
+<mi-view-intyg-error-message
     id="errorMessage"
-    img-path="/img/404.png"
     msg-key="{{errorMessage}}"
+    cert-id="certificateId"
     ng-if="doneLoading && errorMessage">
-</mi-page-message-icon>
+</mi-view-intyg-error-message>
