INTYG-5049: Flyttat miViewIntygErrorMessage från mi -> common eftersom det används av intygsmoduler

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -47,6 +47,7 @@
 @import 'components/miCertificateActionButtons/miCertificateActionButtons.directive.scss';
 @import 'components/miCompactCertificateBody/miCompactCertificateBody.directive.scss';
 @import 'components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss';
+@import 'components/miViewIntygErrorMessage/miViewIntygErrorMessage.directive.scss';
 // endinjector
 
 .rotate-180 {
